<resources>
    <string name="app_name">Sistema Acceso</string>

    <string name="Saludo">Sistema de Acceso</string>
    <string name="Bienvenida">Bienvenido al Sistema de Acceso</string>


    <string name="Loggin">Acceso</string>
    <string name="Usuario">Usuario</string>
    <string name="PW">Contraseña</string>
    <string name="Ingresar">Ingresar</string>

    <string name="Buscar">Buscar</string>
    <string name="Compartir">Compartir</string>
    <string name="Insertar">Insert</string>
    <string name="Modificar">Modificar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Cerrar">Cerrar Seccion</string>

    <string name="Mante">Mantenimiento</string>
    <string name="ID">ID</string>
    <string name="Usuario2">ID Usuario</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Regresar">Regresar</string>

    <string name="Tablas">Tablas</string>
    <string name="MTablas">Tablas de Usuarios</string>
    <string name="title_activity_pruebasubmenus">Pruebasubmenus</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_submenu">Submenu</string>
</resources>
