<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Buscar"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="Item"
        app:showAsAction="always" />
    <item
        android:id="@+id/Compartir"
        android:icon="@android:drawable/ic_menu_share"
        android:title="Item"
        app:showAsAction="always" />
    <item
        android:id="@+id/Mantenimiento"
        android:title="@string/Mante" />
    <item
        android:id="@+id/Videos"
        android:title="@string/Tablas" />
    <item
        android:id="@+id/Eliminar"
        android:title="@string/title_activity_pruebasubmenus" />
    <item
        android:id="@+id/Closed"
        android:title="@string/Cerrar" />
</menu>