<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Manteniminento">

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="508dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mante"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ID"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/IDUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Usuario2"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Titulo"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Descrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Descripcion"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Insert"
            android:text="@string/Insertar"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Modificar"
            android:text="@string/Modificar"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Eliminar"
            android:text="@string/Eliminar"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:onClick="Regresar"
            android:text="@string/Regresar"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>