<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaPrincipal">

    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="266dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="148dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Loggin"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Usu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:hint="@string/Usuario"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/PW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/pw"
            android:ems="10"
            android:hint="@string/PW"
            android:inputType="textPassword"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Ingresar"
            android:text="@string/Ingresar"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>